Clase07/05-despliegue-gcp/backend2-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      app: backend2
  template:
    metadata:
      labels:
        env: dev
        app: backend2
    spec:
      containers:
        - name: backend2
          image: docker17.azurecr.io/backend2
          imagePullPolicy: Always
          ports:
            - containerPort: 3002
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3002
            initialDelaySeconds: 3
            periodSeconds: 3
