Clase07/05-despliegue-gcp/frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      env: dev
      app: frontend
  template:
    metadata:
      labels:
        env: dev
        app: frontend
    spec:
      containers:
        - name: frontend
          image: us-central1-docker.pkg.dev/docker07/frontend/frontend
          imagePullPolicy: Always
          resources:
            limits:
              cpu: "1"
            requests:
              cpu: "0.5"
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 3
